<resources>
    <string name="app_name">CellWatch</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZHBlZWxlciIsImEiOiJjbG1yczNsbDQwODF2MmpucG9rajZqb21mIn0.ImMYfjW1aQ3KtioSRUS_Dg</string>
    <string name="welcome">Welcome to CellWatch</string>
    <string name="welcome_description">CellWatch is an FCC Challenge app. You can collect measurements to send to the FCC to show that your coverage doesn’t meet the minimum standards, or take measurements to test speeds for yourself.</string>
    <string name="other_language_available">¿Prefiere español? Se puede cambiar el idioma en los ajustes del dispositivo.</string>
    <string name="read_more">Read More</string>
    <string name="read_more_underlined"><u>Read More</u></string>
    <string name="rm1">To formally challenge a provider’s performance claims, you need to take several measurements within a geographic area and submit them to the FCC, the U.S. government agency that regulates telecommunications.</string>
    <string name="rm1b">Our app helps consumers take these measurements and automatically submits them to the FCC.</string>
    <string name="rm2">A challenge to a provider’s coverage claims is specific to a geographic area. The FCC has used a hexagonal tiling system to define regions. By collecting several measurements within one hexagonal region, a consumer can prove that the region does not have good mobile Internet performance, despite what their cell carrier may claim.</string>
    <string name="rm3">Our app shows two layers of hexagonal regions: each large hexagonal region contains seven (7) child hexagons.</string>
    <string name="rm3b">Challenges are for the larger hexagons, and you must take measurements within a specific number of child hexagons to count as a challenge.</string>
    <string name="close">Close</string>
    <string name="data_use">Data Use</string>
    <string name="data_use_p1">The data you collect with CellWatch will be shared with the public, including the general location and time of your measurements.</string>
    <string name="data_use_p2">Your CellWatch data may also be used for research purposes.</string>
    <string name="data_use_p3">Please read our privacy policy for details.</string>
    <string name="read_privacy_policy"><a href="https://sites.gatech.edu/cellwatch/android-app/app-privacy-policy/">Read our Privacy Policy</a></string>
    <string name="collection_mode">Collection Mode</string>
    <string name="collection_mode_description">Would you like to work towards a formal FCC challenge? You can update this later in the app settings.\n\nIn both modes your data will be shared with the public, including general locations and timestamps, and may be used by the CellWatch team for research purposes.</string>
    <string name="fcc_challenge_mode">FCC Challenge Mode</string>
    <string name="fcc_challenge_mode_description">Measurements will be sent to the FCC as challenge data. The FCC may make public your exact GPS location, provider, and other relevant details.</string>
    <string name="testing_mode">Testing Mode</string>
    <string name="testing_mode_description">Measurements will not be sent to the FCC.</string>
    <string name="okay">Okay</string>
    <string name="fcc_info">FCC Information</string>
    <string name="fcc_info_description">If you would like to work toward an official FCC challenge, this information must be submitted to the FCC with your measurements. This information will never be shared with the public.</string>
    <string name="name">Name</string>
    <string name="email">Email </string>
    <string name="phone">Phone</string>
    <string name="fcc_acknowledgement">I acknowledge that my service provider may share necessary customer-specific information with the FCC (such as IP address and service plan details).</string>
    <string name="blank_name">Name cannot be blank</string>
    <string name="invalid_phone">Please use format 000-000-0000</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="missing_acknowledgement">Please complete the acknowledgement.</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="allow_permissions_description">In order to take measurements, we need the following permissions:\n\n1. Location, to know where measurements are taken.\n\n2. Phone calls, to gather information about your cellular connection. We will never make phone calls.</string>
    <string name="allow_ready">When ready, click the button below and grant permissions when prompted. You can update these permissions later in your device\'s settings.</string>
    <string name="ready">Ready</string>
    <string name="map">Map</string>
    <string name="hex">Hex</string>
    <string name="add_measurement">Measure</string>
    <string name="search_map">Search Map</string>
    <string name="one_measurement">1 measurement</string>
    <string name="x_measurements">%1$d measurements</string>
    <string name="failed_load_all_measurements">Something went wrong and we\'re only able to show you some of the selected measurements.</string>
    <string name="stationary_or_moving">Are you standing outdoors or in a moving vehicle?</string>
    <string name="stationary_outdoors">Standing Outdoors</string>
    <string name="moving_vehicle">In Moving Vehicle</string>
    <string name="certification_intro">By clicking "Go", I certify to the best of my ability that:</string>
    <string name="certify_subscriber">I am a subscriber of the provider being challenged</string>
    <string name="certify_location">I am in the location selected above</string>
    <string name="certify_phone_working">My phone is in working order</string>
    <string name="certify_statements">All statements in this submission are true and correct</string>
    <string name="testing_warning">You are currently in Testing mode, so this measurement will not be submitted to the FCC. You can change the collection mode in Settings.</string>
    <string name="data_reminder">All data will be stored and used consistent with our <a href="https://sites.gatech.edu/cellwatch/android-app/app-privacy-policy/">privacy policy</a>.</string>
    <string name="go">Go</string>
    <string name="measure">Measure</string>
    <string name="finding_server">Finding server</string>
    <string name="measuring">Measuring</string>
    <string name="measuring_latency">Measuring latency</string>
    <string name="measuring_download">Measuring download speed</string>
    <string name="measuring_upload">Measuring upload speed</string>
    <string name="latency">Latency</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="failed">failed</string>
    <string name="speed_mbps">%1$d Mbps</string>
    <string name="latency_ms">%1$d ms</string>
    <string name="not_cellular_warning">It looks like you are connected to WiFi or have cellular data disabled. If you proceed, your measurement may not be submitted to the FCC.</string>
    <string name="not_cellular_proceed">Measure anyway</string>
    <string name="cancel">Cancel</string>
    <string name="measurement_complete">Measurement complete</string>
    <string name="measurement_failed">Measurement failed</string>
    <string name="hex_index">Hex %1$s</string>
    <string name="latlon">%1$.6f, %2$.6f</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pending">Pending</string>
    <string name="wifi">WiFi</string>
    <string name="fcc_challenge_stationary">FCC Challenge (Stationary)</string>
    <string name="fcc_challenge_vehicle">FCC Challenge (In Vehicle)</string>
    <string name="testing">Testing</string>
    <string name="take_another_measurement">Measure again</string>
    <string name="back_to_map">Back to map</string>
    <string name="measurement_in_progress">Measurement in progress</string>
    <string name="measurement_notifications_name">Measurement</string>
    <string name="measurement_notifications_description">Notifications shown to ensure measurements complete even when the app is closed</string>
    <string name="measurement_history">Measurement History</string>
    <string name="not_in_this_hexagon">Not in this hexagon</string>
    <string name="not_measured">Not measured</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="carrier">Carrier</string>
    <string name="type">Type</string>
    <string name="technology">Technology</string>
    <string name="roaming">Roaming</string>
    <string name="uploaded">Uploaded</string>
    <string name="export">Export</string>
    <string name="export_failed">Export failed</string>
    <string name="settings">Settings</string>
    <string name="p_info">Personal Information</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="edit">Edit</string>
    <string name="device_id">Device ID</string>
    <string name="app_version">App Version</string>
    <string name="copied">Copied %1$s</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="missing_fcc_info_error">Cannot enable FCC Challenge mode without setting name, phone, and email.</string>
    <string name="blank_info_error">Cannot set a blank name, phone number, or email while in FCC Challenge mode.</string>
    <string name="help">Help</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="abt1">The CellWatch app is part of the CellWatch open-source cellular network measurement suite created by researchers at the Georgia Institute of Technology; the University of California, Santa Barbara; and Northern Arizona University. CellWatch is generously funded by the Rockefeller Foundation.</string>
    <string name="abt2">Learn more at our website: <a href="https://sites.gatech.edu/cellwatch">sites.gatech.edu/cellwatch</a>.</string>
    <string name="read_privacy_policy_online">Read our privacy policy online: <a href="https://sites.gatech.edu/cellwatch/android-app/app-privacy-policy/">sites.gatech.edu/cellwatch/android-app/app-privacy-policy/</a></string>
    <string name="abt3">CellWatch is built with many open source libraries. Most of their licenses and required notices are included in an autogenerated list accessible via the button below.</string>
    <string name="dep_licenses">Dependency Licenses</string>
    <string name="abt4">The app also builds upon the following three libraries, all of which use the Apache 2.0 license, the text of which can be found below:\n\n • <a href="https://github.com/robertodauria/msak">Roberto Dauria\'s MSAK</a>: No copyright notice provided.\n • <a href="https://github.com/m-lab/go">M-Lab\'s go-memoryless</a>: No copyright notice provided.\n • <a href="https://github.com/dburckh/AndroidPing">AndroidPing</a>: Copyright 2019 Charter Communications.</string>
    <string name="abt5">Finally, the app uses several <a href="https://fontawesome.com">FontAwesome</a> icons, copyright 2024 Fonticons, Inc. Their license can be found at <a href="https://fontawesome.com/license/free">https://fontawesome.com/license/free</a>.</string>
    <string name="apache_license_header">Apache 2.0 License</string>
</resources>