<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_box_green_border"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/datetime"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uploadSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/stat_sys_upload"
            android:drawablePadding="8dp"
            android:text="@string/upload"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/downloadSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/stat_sys_download"
            android:drawablePadding="8dp"
            android:text="@string/download"
            android:gravity="center"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="16dp"
        android:background="@drawable/white_box_small_green_border">

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/carrierTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carrier"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/technologyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/latencyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latency"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/roamingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roaming"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</LinearLayout>
